crates/cctui-tui/src/snapshots/cctui__view_snapshots__label_picker_confirming_a_delete.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1558
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Overview  3 Machines   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs input (1)
▸    ● [claude-code] infra (main)  opus  0s  $1.25 [infra] [urgent]
   ▾ W┌ Delete label ────────────────────────────────────────────────────────────────────────┐
     ●│❯ delete "docs"? y to confirm, n to keep it                                           │
     ▾│                                                                                      │
      │                                                                                      │
   ▾ C│                                                                                      │
     ○│                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │ y delete  n keep                                                                     │
      └──────────────────────────────────────────────────────────────────────────────────────┘



 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
