crates/cctui-tui/src/snapshots/cctui__view_snapshots__label_picker_filtered.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1526
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Overview  3 Machines   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs input (1)
▸    ● [claude-code] infra (main)  opus  0s  $1.25 [infra] [urgent]
   ▾ W┌ Labels: infra ───────────────────────────────────────────────────────────────────────┐
     ●│ filter wa▏                                                                           │
     ▾│                                                                                      │
      │❯ [ ] ■ wave-5                                                                        │
   ▾ C│                                                                                      │
     ○│                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │ space attach  Ctrl+c new  Ctrl+e edit  Ctrl+d delete  esc close                      │
      └──────────────────────────────────────────────────────────────────────────────────────┘



 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
