crates/cctui-tui/src/snapshots/cctui__view_snapshots__label_picker_hue_choice.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1399
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2  3  4   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs input (1)
▸    ● [claude-code] infra (main)  opus  0s  $1.25 [infra] [urgent]
   ▾ W┌ Pick a hue ──────────────────────────────────────────────────────────────────────────┐
     ●│❯ ■   0                                                                               │
     ▾│  ■  30                                                                               │
      │  ■  60                                                                               │
   ▾ C│  ■  90                                                                               │
     ○│  ■ 120                                                                               │
      │  ■ 150                                                                               │
      │  ■ 180                                                                               │
      │  ■ 210                                                                               │
      │  ■ 240                                                                               │
      │  ■ 270                                                                               │
      │  ■ 300                                                                               │
      │  ■ 330                                                                               │
      │    auto hue from the name                                                            │
      │ ←/→ hue  enter save  esc back                                                        │
      └──────────────────────────────────────────────────────────────────────────────────────┘



 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
