crates/cctui-tui/src/snapshots/cctui__view_snapshots__model_picker_on_a_gated_model.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui (main) on orion ── gpt-5.6-sol·high ── $1.25 ── auto
∴ thinking (2 lines)  (2 more · o)                                                                 ▕
 Read  crates/cctui-tui/src/main.rs  read                                                          ▕
└ 984 lines                                                                                        ▕
 Bash  car┌ Model · codex ───────────────────────────────────────────────────────────────┐         ▕
└ ✗ exit 1│┌ Model ──────────────────────────────────────┐┌ Effort ─────────────────────┐│         ▐
          ││  Default                                    ││  default                    ││         ▐
● Assistan││  Sol (gpt-5.6-sol)                          ││  low                        ││         ▐
Looking at││▸ Terra (gpt-6-terra)  needs 0.160 · at 0.158││  medium                     ││         ▐
          ││                                             ││  high                       ││         ▐
- one     ││                                             ││                             ││         ▐
- two     ││                                             ││                             ││         ▐
⏱ 12.4k in││                                             ││                             ││         ▐
⏱ 38s     ││                                             ││                             ││         ▐
          ││                                             ││                             ││         ▐
◆ lane-b  ││                                             ││                             ││         ▐
the parser││                                             ││                             ││         ▐
· keep-ali│└─────────────────────────────────────────────┘└─────────────────────────────┘│         ▐
⟳ context │  ↑↓ pick  ←→/Tab column  Enter unavailable  Esc cancel                       │         ▐
          └──────────────────────────────────────────────────────────────────────────────┘         ▐
◁ Reply done                                                                                       ▐
────────────────────────────────────────────────────────────────────────────────────────────────────
 ⠋ working
❯  Type a message...
